--- a/css/index.css
+++ b/css/index.css
@@ -1,42 +1,48 @@
 @charset "UTF-8";
 
-
+/* ===== 공통 ===== */
 .home-main {
-  position: relative;     
+  position: relative;
   width: 100%;
-  height: 100vh;          
+  height: 100vh;
   overflow: hidden;
 }
 
-.home-main-images img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;      
+/* 데스크톱 기본 배경 이미지 */
+/* 데스크톱 기본 메인이미지 */
+.home-main-images {
+  position: absolute; inset: 0;
+  background: url('../images/main.png') no-repeat center/cover;
+  z-index: 0;
 }
-
-
+/* 메인 위 컨택트 */
 .home-main-contact {
   position: absolute;
-  bottom: 5%;        
+  bottom: 5%;
   right: 5%;
   display: flex;
   flex-direction: column;
-  z-index: 2;             
+  z-index: 2;
 }
-
-.home-main-contact li{list-style: none; text-align: right; margin: -2% 0;}
-
+.home-main-contact li { list-style: none; text-align: right; margin: -2% 0; }
 .home-main-contact li a {
   font-size: var(--title-size-xl);
   font-weight: 900;
   text-align: center;
-  color: #000000;   
-  text-decoration: none;  
-  transition: opacity 0.1s ease;
+  color: #000;
+  text-decoration: none;
+  transition: opacity .1s ease;
+}
+.home-main-contact li a:hover { opacity: .7; }
+
+@media (max-width: 768px) {
+  .home-main-images {
+    background-image: url('../images/모바일1.png');
+  }
+
+.home-main-contact li a {
+  font-size: var(--title-size-md);
+  font-weight: 900;
 
 }
-.home-main-contact li a:hover {
-  opacity: 0.7;
 }
-
-
