--- a/css/portfolio_1.css
+++ b/css/portfolio_1.css
@@ -2,6 +2,11 @@
 
 header {
   border-bottom: 0.5px solid black;
+    background-color: #ffffff;
+}
+
+header .go-to-top .logo {
+  background-image: url('../images/logo_black.png');
 }
 
 .menu-txt.menuportfolio {
@@ -99,6 +104,7 @@ text-align: left;
   .cell--hero {
     grid-column: auto;
     grid-row: auto;
-    aspect-ratio: 3 / 4;
+    aspect-ratio: 1/1;
   }
+.overview-meta{height: 200px; }
 }
