--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -1,22 +1,28 @@
 @charset "UTF-8";
 
 body { text-align: center; font-family: var(--primary-font-ko); margin: 0; }
-html, body { max-width: 100%; overflow-x: hidden; }
-
+html, body {
+  height: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
 /* ===== Header (공통) ===== */
+
+
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 80px;
+  z-index: 1000;
   display: flex;
   align-items: center;
-  justify-content: space-between; /* 좌: 로고 / 우: 메뉴 or 버튼 */
-  width: 100%;
-  height: 90px;
-  position: fixed;
-  top: 0; left: 0;
+  justify-content: space-between;
   padding: 0 8%;
-  box-sizing: border-box;
-  z-index: 9999;
   background: transparent;
 }
+
 
 header .go-to-top {
   display: flex; align-items: center; justify-content: flex-start;
@@ -116,10 +122,4 @@ header .menu li a:hover { font-weight: bold; }
 }
 
 
-/* ===== Footer ===== */
-footer {
-  width: 100%; height: 20px; background-color: #000;
-  display: flex; align-items: center; justify-content: center;
-  position: absolute; bottom: 0;
-}
-.footer-txt { color: #afafaf; font-size: var(--desc-size-sxx); }
+
