--- a/css/contact.css
+++ b/css/contact.css
@@ -100,3 +100,23 @@ textarea {
 @media (max-width: 480px) {
   .contact { width: 94%; }
 }
+
+
+footer {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 20px;
+  background: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+
+.footer-txt {
+  color: #afafaf;
+  font-size: var(--desc-size-sxx);
+}
