--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -106,7 +106,7 @@ main {
     flex-direction: column;   /* 세로로 배치 */
     gap: 10px;                /* 이미지 간 간격 */
   }
-   .portfolio-list-row2 {margin-top: 10px;}
+   .portfolio-list-row2 {margin-top: 10px; margin-bottom: 30px;}
 
   .portfolio-list {
     width: 90%;               /* 모바일 화면 폭 기준 크기 */
@@ -125,3 +125,23 @@ main {
   }
 }
 
+
+
+footer {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 20px;
+  background: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+
+.footer-txt {
+  color: #afafaf;
+  font-size: var(--desc-size-sxx);
+}
