--- a/css/portfolio_1.css
+++ b/css/portfolio_1.css
@@ -108,3 +108,23 @@ text-align: left;
   }
 .overview-meta{height: 200px; }
 }
+
+
+footer {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 20px;
+  background: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+
+.footer-txt {
+  color: #afafaf;
+  font-size: var(--desc-size-sxx);
+}
