--- a/css/services.css
+++ b/css/services.css
@@ -3,6 +3,8 @@
 /* === 이 3개는 고정 (수정 금지) ====================== */
 header {
   border-bottom: 0.5px solid black;
+    background-color: #ffffff;
+
 }
 
 header .go-to-top .logo {
@@ -171,7 +173,10 @@ main {
 
 }
 @media (max-width: 768px) {
-  .services-grid { grid-template-columns: 1fr; }
+  .services-grid { grid-template-columns: 1fr; height: 90%;}
+  .service-card {
+  position: relative;
+  background: #bfbfbf;}
 }
 
 
