--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -40,7 +40,7 @@ main {
 .portfolio-list {
   width: 18%;
   aspect-ratio: 3 / 4;
-  background-color: #ccc;
+  background-color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
